src/test/deca/context/valid/divide_by_0_with_var.deca
// Description :
//
//       Test contextuellement correct car division par une variable = 0 qui menera à un crash.
//
// Résultats :
//
//      N/A
//
// Historique :
//
//      Créé le 07/06/2023 par gl03

{
    int x=0;
    float y= 3/x;
}
