src/test/deca/context/invalid/minus_intvar_int_minus_string_context.deca
// Description :
//
//      Test contextuellement incorrect de la somme d'un int et d'un string dans une variable int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= 3 + "Bonjour";
}